# camunda-cleaner

./: .dockerignore  .env  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  app.py  pyproject.toml
camunda_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: DeploymentCard.jsx  ErrorAlert.jsx  LoadingSpinner.jsx  ProcessInstance.jsx  SearchBar.jsx
frontend/src/hooks/: useCamundaApi.js  usePolling.js
frontend/src/styles/: index.css
frontend/src/utils/: api.js
templates/: index.html
